--- a/backendclass7/package.json
+++ b/backendclass7/package.json
@@ -14,6 +14,7 @@
     "bcrypt": "^5.1.1",
     "dotenv": "^16.4.1",
     "express": "^4.18.2",
+    "mongoose": "^8.1.3",
     "moongoose": "^0.0.5",
     "nodemon": "^3.0.3"
   }
